@startuml B2B_Confeitaria_ClassDiagram

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam backgroundColor #FAFAFA
skinparam class {
  BackgroundColor #FFF8F0
  BorderColor #C0784A
  HeaderBackgroundColor #C0784A
  HeaderFontColor #FFFFFF
  ArrowColor #7B4F2E
}
skinparam stereotypeCBackgroundColor #F5DEB3
skinparam noteBorderColor #C0784A

' =====================
' ENUMS
' =====================

enum RoleTipo {
  GERENTE
  PADEIRO
  OPERADOR_ESTOQUE
  VENDEDOR
  COMPRADOR
  ADMINISTRADOR
}

enum StatusPedido {
  PENDENTE
  CONFIRMADO
  EM_PRODUCAO
  PRONTO
  DESPACHADO
  ENTREGUE
  CANCELADO
}

enum CategoriaItem {
  BOLO
  DOCE
  SALGADO
  BEBIDA
  EMBALAGEM
  OUTRO
}

' =====================
' USUÁRIO
' =====================

class Usuario {
  - id: UUID
  - nome: String
  - email: String
  - senhaHash: String
  - ativo: Boolean
  - dataCriacao: Date
  - roles: Set<RoleTipo>
  + autenticar(senha: String): Boolean
  + adicionarRole(role: RoleTipo): void
  + removerRole(role: RoleTipo): void
  + getRoles(): Set<RoleTipo>
}

note right of Usuario
  Autorização gerenciada pelo
  Spring Security via
  @PreAuthorize("hasRole(...)")
end note

' =====================
' EMPRESA
' =====================

abstract class Empresa {
  - id: UUID
  - razaoSocial: String
  - cnpj: String
  - email: String
  - telefone: String
  - endereco: Endereco
  - ativo: Boolean
  + cadastrar(): void
  + atualizar(): void
  + validarCNPJ(): Boolean
}

class EmpresaFornecedora extends Empresa {
  - catalogo: List<ItemCatalogo>
  - capacidadeProducao: int
  + adicionarItemCatalogo(item: ItemCatalogo): void
  + removerItemCatalogo(item: ItemCatalogo): void
  + consultarPedidosRecebidos(): List<Pedido>
  + atualizarCapacidade(capacidade: int): void
}

class EmpresaCompradora extends Empresa {
  - limiteCredito: Double
  - historicoCompras: List<Pedido>
  + realizarPedido(pedido: Pedido): void
  + consultarHistoricoCompras(): List<Pedido>
  + solicitarCotacao(itens: List<ItemPedido>): Cotacao
  + consultarLimiteCredito(): Double
}

' =====================
' CATÁLOGO / PRODUTO
' =====================

class ItemCatalogo {
  - id: UUID
  - nome: String
  - descricao: String
  - categoria: CategoriaItem
  - precoUnitario: Double
  - unidadeMedida: String
  - estoqueDisponivel: int
  - estoqueMinimo: int
  - ativo: Boolean
  + verificarDisponibilidade(qtd: int): Boolean
  + calcularPrecoTotal(qtd: int): Double
}

class Estoque {
  - id: UUID
  - quantidadeAtual: int
  - estoqueMinimo: int
  - ultimaAtualizacao: Date
  + atualizar(qtd: int): void
  + reservar(qtd: int): Boolean
  + liberarReserva(qtd: int): void
  + verificarMinimo(): Boolean
}

' =====================
' PEDIDO
' =====================

class Pedido {
  - id: UUID
  - numeroPedido: String
  - dataCriacao: Date
  - dataEntregaPrevista: Date
  - status: StatusPedido
  - valorTotal: Double
  - observacoes: String
  + confirmar(): void
  + cancelar(): void
  + calcularTotal(): Double
  + atualizarStatus(status: StatusPedido): void
}

class ItemPedido {
  - id: UUID
  - quantidade: int
  - precoUnitario: Double
  - subtotal: Double
  + calcularSubtotal(): Double
}

' =====================
' COTAÇÃO
' =====================

class Cotacao {
  - id: UUID
  - dataSolicitacao: Date
  - dataResposta: Date
  - validade: Date
  - status: String
  - observacoes: String
  + responder(): void
  + aprovar(): Pedido
  + recusar(): void
  + estaValida(): Boolean
}

' =====================
' NOTA FISCAL
' =====================

class NotaFiscal {
  - id: UUID
  - numero: String
  - dataEmissao: Date
  - valorTotal: Double
  - impostos: Double
  + emitir(): void
  + cancelar(): void
}

' =====================
' ENDEREÇO
' =====================

class Endereco {
  - id: UUID
  - logradouro: String
  - numero: String
  - complemento: String
  - bairro: String
  - cidade: String
  - estado: String
  - cep: String
}

' =====================
' RELACIONAMENTOS
' =====================

' Usuário e Role
Usuario "1" o-- "1..*" RoleTipo : possui >

' Empresa e Usuário
Empresa "1" *-- "1..*" Usuario : emprega >

' Catálogo e Estoque
EmpresaFornecedora "1" *-- "0..*" ItemCatalogo : gerencia >
ItemCatalogo "1" *-- "1" Estoque : controla >

' Pedido
EmpresaCompradora "1" -- "0..*" Pedido : realiza >
EmpresaFornecedora "1" -- "0..*" Pedido : recebe >
Pedido "1" *-- "1..*" ItemPedido : contém >
ItemPedido "0..*" --> "1" ItemCatalogo : referencia >
Pedido "1" -- "0..1" NotaFiscal : gera >
Pedido "1" -- "1" Cotacao : originado de >

' Cotação
EmpresaCompradora "1" -- "0..*" Cotacao : solicita >
EmpresaFornecedora "1" -- "0..*" Cotacao : responde >
Cotacao "1" *-- "1..*" ItemPedido : itens >

' Endereço
Empresa "1" *-- "1" Endereco : possui >

@enduml 